crates/oxc_react_compiler/tests/snapshots/error.unsupported-implicit-arguments-annex-b-lexically-blocked.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.unsupported-implicit-arguments-annex-b-lexically-blocked.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Implicit 'arguments' is not supported", labels: [LabeledSpan { label: Some("implicit `arguments` object referenced here"), span: Span { start: 117, end: 126 }, primary: true }], help: Some("React Compiler does not support compiling functions that reference the implicit arguments object"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Warning, code: OxcCode { scope: Some("react-compiler"), number: Some("UnsupportedSyntax") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

No changes.
